.helm/templates/ingress.yaml
apiVersion: v1
kind: Service
metadata:
    name: chat
spec:
    selector:
        name: chat
    ports:
        - name: http
          port: 80
          targetPort: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  rules:
  - host: chat-test.aisystant.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chat
            port:
              number: 80
